# eshet-esp-idf

./: .gitmodules  CMakeLists.txt  Kconfig  README.md  flake.nix  format.sh
cmake/: FindThreads.cmake
example/: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
example/main/: CMakeLists.txt  idf_component.yml  main.cpp
include/: eshet_esp.hpp  eshet_ota.hpp
include/eshet_esp/: eshet_gpio.hpp
src/: eshet_esp.cpp  eshet_ota_cli.cpp
